--- a/assets/html/modals.html
+++ b/assets/html/modals.html
@@ -1123,7 +1123,7 @@
             </div>
             <div class="modal-body text-justify">
                 <figure>
-                    <img class="img-fluid rounded ratio ratio-16x9" alt="About-me" src="assets/img/About-me.png">
+                    <img class="img-fluid rounded ratio ratio-16x9" alt="About-me" src="assets/img/about-me-back.png">
                     <figcaption class="figure-caption mt-1">Il s'agit tout simplement du site actuel présentant mes compétences, ma carrière et mes projets réalisés</figcaption>
                 </figure>
             </div>
@@ -1145,7 +1145,7 @@
             </div>
             <div class="modal-body text-justify">
                 <figure>
-                    <img class="img-fluid rounded ratio ratio-16x9" alt="Roll20Alternative" src="assets/img/Roll20Alternative.png">
+                    <img class="img-fluid rounded ratio ratio-16x9" alt="Roll20Alternative" src="assets/img/roll20Alternative-back.png">
                     <figcaption class="figure-caption mt-1">Site alternatif à Roll20 réalisé pour un projet tuteuré en équipe de 6 durant mon quatrième semestre de DUT Informatique</figcaption>
                 </figure>
             </div>
@@ -1167,8 +1167,8 @@
             </div>
             <div class="modal-body text-justify">
                 <figure>
-                    <img class="img-fluid rounded ratio ratio-16x9" alt="Utility-tools" src="assets/img/Utility-tools.png">
-                    <figcaption class="figure-caption mt-1">Site personel réalisé durant le quatrième semestre de DUT Informatique, il permet de nous aider dans certaine actions lorsque l'on fait de la réadction ou des calculs</figcaption>
+                    <img class="img-fluid rounded ratio ratio-16x9" alt="Utility-tools" src="assets/img/utility-tools-back.png">
+                    <figcaption class="figure-caption mt-1">Site personnel réalisé durant le quatrième semestre de DUT Informatique, il permet de nous aider dans certaine actions lorsque l'on fait de la réadction ou des calculs</figcaption>
                 </figure>
             </div>
             <div class="modal-footer">
