--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container row justify-content-center align-items-center g-5">
             <div class="col-xs-12 col-md-8 col-lg-5 col-xl-5 mb-3">
                 <svg viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <mask id="mask0" mask-type="alpha">
+                    <mask id="mask0" style="mask-type:alpha">
                         <path d="M190.312 36.4879C206.582 62.1187 201.309 102.826 182.328 134.186C163.346 165.547
         130.807 187.559 100.226 186.353C69.6454 185.297 41.0228 161.023 21.7403 129.362C2.45775
         97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 -0.149132 97.9666
@@ -73,7 +73,7 @@
                 </div>
                 <div class="row row-cols-1 g-3 justify-content-start mb-2">
                     <div class="col">
-                        <h2 class="fs-4">Dévellopeur web - Fullstack</h2>
+                        <h2 class="fs-4">Développeur web - Fullstack</h2>
                     </div>
                 </div>
                 <div class="row row-cols-1 g-3 justify-content-start mb-2">
@@ -85,6 +85,7 @@
                 </div>
             </div>
         </div>
+        <a href="#skills" class="nav-link scroll-below badge rounded-pill fs-5 my-3 text-light"><i class="bi bi-mouse"></i> Défiler vers le bas <i class="bi bi-arrow-down-short"></i></a>
     </div>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="reverse">
         <path class="wave-blue" fill-opacity="1"
@@ -239,14 +240,14 @@
             </div>
             <div class="timeline-container timeline-right">
                 <div class="content rounded">
-                    <h3><span class="badge bg-secondary"> 2021</span> DUT Informatique</h3>
+                    <h3><span class="badge bg-secondary">2021</span> DUT Informatique</h3>
                     <p class="fs-5">IUT Nice Côte d'Azur</p>
                     <p class="text-justify">Formation initiale menant sur l'apprentissage de l'ensemble des types de langage de programmation existants.</p>
                 </div>
             </div>
             <div class="timeline-container timeline-left">
                 <div class="content rounded">
-                    <h3><span class="badge bg-secondary"> 2021</span> Stage en entreprise</h3>
+                    <h3><span class="badge bg-secondary">2021</span> Stage en entreprise</h3>
                     <p class="fs-5">UBS (Monaco) S.A.</p>
                     <p class="text-justify">Stage de 4 mois pour l'obtention du DUT à UBS Monaco en tant que développeur web</p>
                 </div>
@@ -262,18 +263,18 @@
         <h1 class="text-center fw-bold mb-5">Portfolio</h1>
         <div class="container">
             <div class="row justify-content-center align-items-center g-5">
-                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center"><img class="img-fluid rounded ratio ratio-16x9 portfolio-img" src="assets/img/About-me.png" data-bs-toggle="modal" data-bs-target="#aboutMeModal" alt="About-me"></div>
-                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center"><img class="img-fluid img-thumbnail rounded ratio ratio-16x9 portfolio-img" src="assets/img/Roll20Alternative.png" data-bs-toggle="modal" data-bs-target="#roll20AlternativeModal" alt="Roll20Alternative"></div>
-                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-centerr"><img class="img-fluid rounded ratio ratio-16x9 portfolio-img" src="assets/img/Utility-tools.png" data-bs-toggle="modal" data-bs-target="#utilitytoolsModal" alt="Utility-tools"></div>
-                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-centerr"><img class="img-fluid img-thumbnail rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=WIP" data-bs-toggle="modal" data-bs-target="#wipModal" alt="WIP" ></div>
-                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-centerr"><img class="img-fluid img-thumbnail rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=WIP" data-bs-toggle="modal" data-bs-target="#wipModal" alt="WIP"></div>
-                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-centerr"><img class="img-fluid img-thumbnail rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=WIP" data-bs-toggle="modal" data-bs-target="#wipModal" alt="WIP"></div>
+                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center"><img class="img-fluid img-thumbnail rounded ratio ratio-16x9 portfolio-img" src="assets/img/about-me-front.png" data-bs-toggle="modal" data-bs-target="#aboutMeModal" alt="About-me"></div>
+                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center"><img class="img-fluid img-thumbnail rounded ratio ratio-16x9 portfolio-img" src="assets/img/roll20Alternative-front.png" data-bs-toggle="modal" data-bs-target="#roll20AlternativeModal" alt="Roll20Alternative"></div>
+                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center"><img class="img-fluid rounded ratio ratio-16x9 portfolio-img" src="assets/img/utility-tools-back.png" data-bs-toggle="modal" data-bs-target="#utilitytoolsModal" alt="Utility-tools"></div>
+                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center"><img class="img-fluid img-thumbnail rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=WIP" data-bs-toggle="modal" data-bs-target="#wipModal" alt="WIP" ></div>
+                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center"><img class="img-fluid img-thumbnail rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=WIP" data-bs-toggle="modal" data-bs-target="#wipModal" alt="WIP"></div>
+                <div class="col-xs-12 col-sm-6 col-md-4 d-flex justify-content-center"><img class="img-fluid img-thumbnail rounded ratio ratio-16x9 portfolio-img" src="https://via.placeholder.com/500x281.png?text=WIP" data-bs-toggle="modal" data-bs-target="#wipModal" alt="WIP"></div>
             </div>
         </div>
     </div>
     <svg height="100%" width="100%" viewBox="0 0 1440 400" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150">
         <path
-               d="M 0,400 C 0,400 0,200 0,200 C 93.64285714285714,175.03571428571428 187.28571428571428,150.07142857142858 292,174 C 396.7142857142857,197.92857142857142 512.5,270.75 655,263 C 797.5,255.25 966.7142857142858,166.92857142857142 1102,143 C 1237.2857142857142,119.07142857142858 1338.642857142857,159.53571428571428 1440,200 C 1440,200 1440,400 1440,400 Z" stroke="none" stroke-width="0" fill="#212529ff" class="wave-gray-900 transition-all duration-300 ease-in-out delay-150">
+                d="M 0,400 C 0,400 0,200 0,200 C 93.64285714285714,175.03571428571428 187.28571428571428,150.07142857142858 292,174 C 396.7142857142857,197.92857142857142 512.5,270.75 655,263 C 797.5,255.25 966.7142857142858,166.92857142857142 1102,143 C 1237.2857142857142,119.07142857142858 1338.642857142857,159.53571428571428 1440,200 C 1440,200 1440,400 1440,400 Z" stroke="none" stroke-width="0" fill="#212529ff" class="wave-gray-900 transition-all duration-300 ease-in-out delay-150">
         </path>
     </svg>
     <div class="container-fluid bg-dark text-light row justify-content-center m-0" id="contact">
@@ -337,7 +338,7 @@
     <div class="container-fluid bg-gray-900 text-light text-center p-3">
         <div class="row">
             <div class="col-xs-12 col-md-3 text-md-start">
-                Site sous lincence MIT
+                Site sous licence MIT
             </div>
             <div class="col-xs-12 col-md-6 text-md-center">
                 Réalisé par Alexis De Chiara
