--- a/assets/html/modals.html
+++ b/assets/html/modals.html
@@ -1151,7 +1151,7 @@
             </div>
             <div class="modal-footer">
                 <a href="https://github.com/alexisdechiara/roll20alternative" target="_blank" type="button" class="btn btn-secondary"><i class="bi bi-github"></i>&nbspProjet</a>
-                <a href="#" target="_blank" type="button" class="btn btn-primary"><i class="bi bi-box-arrow-up-right"></i>&nbspSite</a>
+                <a href="#" target="_blank" type="button" class="btn btn-primary disabled"><i class="bi bi-box-arrow-up-right"></i>&nbspSite</a>
             </div>
         </div>
     </div>
@@ -1173,7 +1173,7 @@
             </div>
             <div class="modal-footer">
                 <a href="https://github.com/alexisdechiara/utility-tools" target="_blank" type="button" class="btn btn-secondary"><i class="bi bi-github"></i>&nbspProjet</a>
-                <a href="https://alexisdechiara.github.io/utility-tools/" target="_blank" type="button" class="btn btn-primary"><i class="bi bi-box-arrow-up-right"></i>&nbspSite</a>
+                <a href="https://alexisdechiara.me/utility-tools/" target="_blank" type="button" class="btn btn-primary"><i class="bi bi-box-arrow-up-right"></i>&nbspSite</a>
             </div>
         </div>
     </div>
