--- a/assets/html/modals.html
+++ b/assets/html/modals.html
@@ -297,6 +297,31 @@
     </div>
 </div>
 
+<!-- Firebase modal -->
+<div class="modal fade" id="firebaseModal" tabindex="-1" aria-labelledby="firebaseLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title fs-1 fw-bold text-nowrap" id="firebaseModalLabel"><img src="assets/img/logo/logo-firebase-long.svg" alt="Firebase" height="64px"></h3>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-justify">
+                <figure class="bg-light rounded p-3 pb-2">
+                    <blockquote class="blockquote fs-6">
+                        Firebase est le nom d’une plateforme mobile de Google qui facilite la création de back-end à la fois scalable et performant. En d’autres termes, il s’agit d’une plateforme qui permet de développer rapidement des applications pour mobile et pour le web.
+                    </blockquote>
+                    <figcaption class="blockquote-footer text-end">
+                        Définition de <cite title="Source Title"><a class="text-reset text-decoration-none" href="https://junto.fr/blog/firebase/" target="_blank">Junto</a></cite>
+                    </figcaption>
+                </figure>
+                <p>
+                    J'ai rencontré pas mal de problème avec firebase mais je reconnais tout de même ça facilité d'utilisation et son aide très pratique qu'il peut avoir dans des applications principalement portées sur du front-end.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Angular modal -->
 <div class="modal fade" id="angularModal" tabindex="-1" aria-labelledby="angularLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -318,6 +343,31 @@
                 </figure>
                 <p>
                     J'ai utilsié les deux version de Angular, que cela soit AngularJS ou Angular 2. J'aime beaucoup ce framework et je l'ai utilisé pour un projet d'aide utilitaire pendant mon semestre 4, celui-ci s'intitule "Utility-tools" et est disponible dans mon git en open-source. Pour AngularJS je l'ai utilsié durant mon stage à UBS.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- React modal -->
+<div class="modal fade" id="reactModal" tabindex="-1" aria-labelledby="reactLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title fs-1 fw-bold text-nowrap" id="reactModalLabel"><img src="assets/img/logo/logo-react-long.svg" alt="React" height="64px"></h3>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-justify">
+                <figure class="bg-light rounded p-3 pb-2">
+                    <blockquote class="blockquote fs-6">
+                        React est une bibliothèque JavaScript open-source qui est utilisée pour construire des interfaces utilisateur spécifiquement pour des applications d'une seule page. Elle est utilisée pour gérer la couche d'affichage des applications web et mobiles.
+                    </blockquote>
+                    <figcaption class="blockquote-footer text-end">
+                        Définition de <cite title="Source Title"><a class="text-reset text-decoration-none" href="https://ibracilinks.com/blog/quest-ce-que-reactjs-et-pourquoi-devrions-nous-utiliser-reactjs" target="_blank">ibracilinks</a></cite>
+                    </figcaption>
+                </figure>
+                <p>
+                    Je trouve vraiment pratique cette librairie qui a su devenir un framework tellement il propose de possibilité maintenant, cependant il n'est pas assez gros pour tout faire, je préfère à ce titre Angular.
                 </p>
             </div>
         </div>
@@ -445,6 +495,32 @@
                 </figure>
                 <p>
                     Bootstrap est le framework css que j'utilise le plus notament car il peut s'utiliser partout et qu'il possède une énorme communauté, j'ai acquis beaucoup de compétence sur ce framework et il sera certain que je vais l'utiliser encore longtemps.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Tailwind CSS modal -->
+<div class="modal fade" id="tailwindcssModal" tabindex="-1" aria-labelledby="tailwindcssLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title fs-1 fw-bold text-nowrap" id="tailwindcssModalLabel"><img src="assets/img/logo/logo-tailwindcss-long.svg" alt="Tailwind CSS" height="48px"></h3>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-justify">
+                <figure class="bg-light rounded p-3 pb-2">
+                    <blockquote class="blockquote fs-6">
+                        Tailwind CSS est un framework permettant aux développeurs de personnaliser totalement et simplement le design de leur application ou de leur site web. Avec ce framework CSS, il est possible de créer un design d’interface au sein même du fichier HTML.
+                        Cette façon de programmer n’interfère pas avec les pratiques recommandées par le W3C comme celle de séparer le HTML des feuilles de style CSS.
+                    </blockquote>
+                    <figcaption class="blockquote-footer text-end">
+                        Définition de <cite title="Source Title"><a class="text-reset text-decoration-none" href="https://www.numendo.com/blog/framework/tailwind-css-framework-totalement-personnalisable/" target="_blank">Numendo</a></cite>
+                    </figcaption>
+                </figure>
+                <p>
+                    J'ai appris à l'utiliser très recemment mais cela fait longtemps que je voulais l'utiliser, j'aime beaucoup ça façon de fonctionner.
                 </p>
             </div>
         </div>
