--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                                 <img src="assets/img/logo/logo-mySQL-short.svg" alt="MySQL" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#mysqlModal" height="64">
                                 <img src="assets/img/logo/logo-postgreSQL-short.svg" alt="PostgreSQL" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#postgresqlModal" height="64">
                                 <img src="assets/img/logo/logo-oracle-short.svg" alt="Oracle Database" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#oracledatabaseModal" height="64">
+                                <img src="assets/img/logo/logo-firebase-short.svg" alt="Firebase" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#firebaseModal" height="64">
                             </div>
                         </div>
                     </div>
@@ -144,11 +145,13 @@
                         <div class="accordion-body">
                             <div class="row g-3 justify-content-center">
                                 <img src="assets/img/logo/logo-angular-short.svg" alt="Angular" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#angularModal" height="64">
+                                <img src="assets/img/logo/logo-react-short.svg" alt="React" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#reactModal" height="64">
                                 <img src="assets/img/logo/logo-laravel-short.svg" alt="Laravel" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#laravelModal" height="64">
                                 <img src="assets/img/logo/logo-symfony-short.svg" alt="Symfony" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#symfonyModal" height="64">
                                 <img src="assets/img/logo/logo-spring-short.svg" alt="Spring" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#springModal" height="64">
                                 <img src="assets/img/logo/logo-hibernate-short.svg" alt="Hibernate" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#hibernateModal" height="64">
                                 <img src="assets/img/logo/logo-bootstrap-short.svg" alt="Bootstrap" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#bootstrapModal" height="64">
+                                <img src="assets/img/logo/logo-tailwindcss-short.svg" alt="Tailwind CSS" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#tailwindcssModal" height="64">
                                 <img src="assets/img/logo/logo-material-short.svg" alt="Material" class="col-auto zoom clickable" data-bs-toggle="modal" data-bs-target="#materialModal" height="64">
                             </div>
                         </div>
